<resources>
    <string name="app_name">Boardverse</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="min_game_fragment_game_thumbnail_description">Game Thumbnail</string>
    <string name="min_game_fragment_game_name">Game Name</string>
    <string name="min_game_fragment_game_score">5.0</string>
    <string name="min_game_fragment_score_star_description">Score of the app</string>

	<string name="home_fragment_carousel_latest_games">Latest Games</string>

    <string name="carousel_fragment_title">Carousel Title</string>
    <string name="carousel_fragment_title_colon">&#160;:</string>
    <string name="carousel_fragment_view_all_button_description">View all</string>

</resources>
