<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/minGameFragment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/minGameThumbnail"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/min_game_fragment_game_thumbnail_description"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_min_game_image_placeholder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/minGameName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="100dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:padding="3dp"
            android:scrollHorizontally="false"
            android:text="@string/min_game_fragment_game_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/minGameScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/min_game_fragment_game_score"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:baselineAligned="true"
                android:contentDescription="@string/min_game_fragment_score_star_description"
                android:src="@drawable/ic_min_game_star" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>
