<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/carousel_fragment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carousel_fragment_title">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carousel_fragment_title_colon">
            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/carousel_fragment_view_all_button_description"
            android:src="@drawable/ic_carousel_arrow"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true">
        </ImageButton>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <fragment
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            tools:layout="@layout/min_game_fragment">
        </fragment>

        <fragment
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            tools:layout="@layout/min_game_fragment">
        </fragment>

    </androidx.recyclerview.widget.RecyclerView>

</androidx.appcompat.widget.LinearLayoutCompat>